secure.css
#reply-control {
  left: 0 !important;
  z-index: 999; }

h1 {
    font-weight: 300 !important;
}

body h1, body h2, body h3, body h4, body h5, body h6 {
    font-family: inherit;
    font-weight: 300;
    color: inherit;
    text-rendering: optimizelegibility;
}

html {
  background-color: #172232;
  font: 300 14px/19px Monospace, FreeMono, Helvetica Nue  !important;
  font-weight: 300;}
  
.extra-info-wrapper {
    float: left;
    width: 72%;
    max-width: 780px;
}
#topic-progress {
    color: #fff !important;
    background-color: #172232;
    button {
        &:nth{color: #fff;}
        color: #fff; 
        }
    button:disabled{color: #333;}
    .bg { background-color: rgb(86, 142, 202) !important; }
}

#main-outlet .contents {
  font-family: Arial, sans-serif !important; }

body {
  background-color: #f5f5f5; //shh... only dreams now
  height: 100%; 
  min-width: 1000px;}

#main {
  width: 100% !important;
  min-height: 500px;
  background-color: #f5f5f5;
  margin: 0 auto;
}

.icon-star.starred {
  color: #568ECA!important; }

a.star.starred {
  color: #568ECA!important;
  text-shadow: none!important; }

.d-header {
  background-color: #243445 !important;
  border-bottom: none;
  box-shadow: none;
  width: 1000px !important;
  color: white !important; 
  position: fixed;  
}

button {
  background: #eee;
  linear-gradient: none;
  border-radius: 0 !important;
  border-color: #cccccc !important; }

button:hover {
  background-color: #568ECA!important;
  color: #fff; }

.icons:last-child .icon {
  border: none;
  border-radius: 0!important; }

.icon {
  border: none; }

.active .icon:after {
  border-top: none; }

.heading {
  border-top: none !important;
  margin-top: 7px !important;
  text-shadow: none !important;
  background-color: transparent !important;
  box-shadow: none !important; }

#reply-control .autocomplete ul li a[href].selected {
  background-color: #cccccc !important; }

.selected {
  background-color: black !important; }

#suggested-topics {
  width: 980px!important; }

#topic-progress {
  left: 330px !important;
}

.bg {
  background-color: #eeeeee !important; }

th {
  border-bottom: none;
  color: #243445!important;
  background-color: #ddd!important;
  text-shadow: none!important;
  box-shadow: none !important; }

td {
  color: #243445!important; }

.category-column {
  width: 495px; }

/*.logo-small { 
    height: 36px !important;
    width: 36px; 
}
*/

.gutter {
  width: 170px; }

.track-link {
  color: #243445;
  text-shadow: none; }

.track-link:hover {
  color: #d54e21 !important; }

.reply-new .icon-plus {
  color: #343e49 !important;
  background-color: inherit !important;
  text-shadow: none !important; }

a.reply-new:hover {
  color: #d54e21 !important; }

h3.moderator a {
  background-color: #dee9f5 !important;
//  padding: 2px;
  border: 1px solid #dee9f5 !important; }

.moderator .topic-body {
  background: transparent !important; }

.moderator:after {
  border-right-color: #dee9f5 !important; }

.topic-post.moderator article.boxed .topic-body .contents {
  background-color: #dee9f5 !important; }

nav.post-controls {
  color: #243445; }

.post-controls button.create {
  color: #343e49 !important;
  background-color: #fafafa !important;
  border-left: none !important; }

#user-info button.create {
  background: #568eca !important;
  color: white !important; }

#user-info button.create:hover {
  background-color: #243445!important; }

post-controls button.create:hover {
  color: #fff;
  background-color: #568eca !important;
  border-left: none !important; }

//#user-info button.create, #user-info a.btn {
//  width: 240px !important; }

article.boxed .last-read {
  color: #d54e21 !important; }

article.boxed .bookmarked {
  color: #568eca !important; }

.bookmarked {
  color: #568eca !important; }

div.read-icon.bookmarked {
  color: #568eca !important; }

//.topic-body .contents .cooked {
//  padding: 12px 25px 0; }

/*.topic-body .contents {
  border: none;
  border-radius: 0; }
*/

.summary li {
  border-right: 1px solid #eeeeee; }

.buttons .btn {
  color: #243445;
  background: #ccc;
  text-shadow: none; }

.buttons .btn:hover {
  background: #243445;
  color: #eee; }

//.user-heading {
//  background-color: transparent; }

//.user-navigation { width: 200px;}

.user-info {
  border: none;
  border-radius: 0;
  width: 865px;
  box-shadow: none; }
.user-main {
    width: 730px;
    .about {
        background-color: transparent;
        .details {
            img.avatar {background-color: transparent;}
            .primary {width: 65%;}
            .secondary {width: 25%;}
        }
    }
}

.site-settings-detail { width: 730px; }

#user-stream {
  width: 730px !important; }

.staff a {
    background: transparent;
    &:before {content: '\7E ';}
}

.mention {
    background: none repeat scroll 0% 0% #0077b3 !important;
    color: #fff !important;
    padding: 2px 2px !important;
}

.about-me {
  width: 837px !important; }

.btn {
  border-radius: 0;
  text-shadow: none;
  box-shadow: none; }

.btn[disabled] {
  text-shadow: none; }

.nav-pills li a:hover {
  color: #568ECA!important;
  background-color: #CADCEF!important;
  border-color: #CADCEF!important; }

.nav-pills li a {
  border: none !important;
  text-shadow: none !important;
  border-radius: 0 !important; }

.not-logged-in-avatar .active, .nav-pills li.active a {
  background-color: #568ECA!important;
  text-shadow: none !important;
  box-shadow: none !important;
  border-color: #568ECA!important; }

.not-logged-in-avatar .active, .nav-pills li a.active {
  background-color: #568ECA!important;
  text-shadow: none !important;
  box-shadow: none !important;
  border-color: #568ECA!important; }

.not-logged-in-avatar:hover, .nav-pills li a.active:hover {
  color: white !important; }

.nav-pills li.active a:hover {
  color: white !important; }

.nav-stacked {
  box-shadow: none;
  border-radius: 0; }

.active .icon:after {
  border-top: none !important; }
/* ... */

